Bug 984284 - [Tarako][Hamachi]a2dp headset icon show on the notification bar, a=1.3t+