dom/bluetooth/bluedroid/BluetoothA2dpManager.cpp
@@ -193,6 +193,12 @@ BluetoothA2dpManager::Observe(nsISupports* aSubject,
 
 BluetoothA2dpManager::BluetoothA2dpManager()
 {
+  Reset();
+}
+
+void
+BluetoothA2dpManager::Reset()
+{
   ResetA2dp();
   ResetAvrcp();
 }
