dom/bluetooth/bluedroid/BluetoothA2dpManager.h
@@ -33,8 +33,7 @@ public:
 
   static BluetoothA2dpManager* Get();
   ~BluetoothA2dpManager();
-  void ResetA2dp();
-  void ResetAvrcp();
+  void Reset();
 
   // A2DP-specific functions
   void HandleSinkPropertyChanged(const BluetoothSignal& aSignal);
@@ -64,6 +63,9 @@ private:
   class SinkPropertyChangedHandler;
   BluetoothA2dpManager();
   bool Init();
+  void ResetA2dp();
+  void ResetAvrcp();
+
   void HandleShutdown();
   void NotifyConnectionStatusChanged();
 
